# sovariel-dyad-v7

./: .gitignore  README.md  mars_mesh_log.csv  run.bat  spectrum.csv
docker/: Dockerfile.python  Dockerfile.ros2
python_engine/: dyad_field_v7.py  requirements.txt  run.bat
ros2_ws/src/dyad_node/: CMakeLists.txt  package.xml
scripts/: run_python.ps1  run_python.sh
sovariel-dyad-v7/: README.md  dyad_swarm_v7_real_fusion.py
